[project]
name = "aml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "kagglehub[pandas-datasets]>=0.3.13",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "rrcf>=0.4.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.20.0",
]
