[project]
name = "aml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym>=0.26.2",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "kagglehub[pandas-datasets]>=0.3.13",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "rrcf>=0.4.4",
    "scikeras[tensorflow]>=0.13.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tensorflow>=2.18.1",
    "xgboost>=3.1.2",
]
